# freeciv21

./: CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json
ai/default/: daieffects.cpp
client/: helpdlg.cpp  packhand.cpp  text.cpp
common/: combat.cpp  combat.h  effects.cpp  fc_types.h  helpdata.cpp  unit.cpp  unit.h  unittype.h
common/networking/: packets.def
common/tests/: CMakeLists.txt  combat_math.cpp
data/: CMakeLists.txt  nationstates.serv
data/nationstates/: README.nationstates  buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
data/tests/: rulesets.cpp.in
nationstates/: CLAUDE.md  gen_techtree.py  techtree.md
nationstates.ruleup/: buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nations.ruleset  styles.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
server/: edithand.cpp  ruleset.cpp  unithand.cpp  unittools.cpp
server/savegame/: savegame3.cpp
tests/: test_first_strikes.sh  test_first_strikes_scenario.sh
tools/: civmanual.cpp
tools/ruleutil/: rulesave.cpp
